Fixed menu align

--- a/css/modules/fixed-header.less
+++ b/css/modules/fixed-header.less
@@ -33,7 +33,7 @@
 
 .fixed-header nav li {
   display: inline;
-  padding: 0 .5em;
+  padding: 0 0 0 1em;
 }
 
 .fixed-header nav a:link,
